--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 </head>
 
 <body>
-    
+
     <header>
         <nav>
             <h1 id="BocaStore">Boca <span class="TituloStore">Store</span> </h1>
             <div id="ContainerMenu">
                 <ul class="MenuDesplegable">
-                    <li id="TamañoMenu"><h4 class="ColorMenu" href="">Menú</h4>
+                    <li id="TamañoMenu">
+                        <h4 class="ColorMenu" href="">Menú</h4>
                         <ul class="Submenu">
                             <li class="LinkNavegacion"><a class="ColorLink" href="./pages/Hombre.html">Hombre</a></li>
                             <li class="LinkNavegacion"><a class="ColorLink" href="./pages/Mujer.html">Mujer</a></li>
@@ -45,6 +46,60 @@
             <section id="Productos-y-titulos">
                 <h2 id="TituloProductos_Destacados">Productos Destacados</h2>
                 <div id="ProductosDestacados">
+                    <div class="Remera">
+                        <img class="ImagenRemera" src="assets/img/RemeraBocaHombre1.jpg" alt="">
+                        <div class="ContainerPrecioComprar">
+                            <a class="TipografiaProductos" href="">$15.000</a>
+                            <a class="TipografiaProductos" href="">Comprar</a>
+                            <img src="" alt="">
+                            <!--Carrito de compras-->
+                        </div>
+                    </div>
+                    <div class="Remera">
+                        <img class="ImagenRemera" src="assets/img/RemeraBocaHombre2.jpg" alt="">
+                        <div class="ContainerPrecioComprar">
+                            <a class="TipografiaProductos" href="">$15.000</a>
+                            <a class="TipografiaProductos" href="">Comprar</a>
+                            <img src="" alt="">
+                            <!--Carrito de compras-->
+                        </div>
+                    </div>
+                    <div class="Remera">
+                        <img class="ImagenRemera" src="assets/img/RemeraBocaHombre3.jpg" alt="">
+                        <div class="ContainerPrecioComprar">
+                            <a class="TipografiaProductos" href="">$15.000</a>
+                            <a class="TipografiaProductos" href="">Comprar</a>
+                            <img src="" alt="">
+                            <!--Carrito de compras-->
+                        </div>
+                    </div>
+                    <div class="Remera">
+                        <img class="ImagenRemera" src="assets/img/RemeraBocaMujer1.jpg" alt="">
+                        <div class="ContainerPrecioComprar">
+                            <a class="TipografiaProductos" href="">$15.000</a>
+                            <a class="TipografiaProductos" href="">Comprar</a>
+                            <img src="" alt="">
+                            <!--Carrito de compras-->
+                        </div>
+                    </div>
+                    <div class="Remera">
+                        <img class="ImagenRemera" src="assets/img/RemeraBocaMujer3.jpg" alt="">
+                        <div class="ContainerPrecioComprar">
+                            <a class="TipografiaProductos" href="">$15.000</a>
+                            <a class="TipografiaProductos" href="">Comprar</a>
+                            <img src="" alt="">
+                            <!--Carrito de compras-->
+                        </div>
+                    </div>
+                    <div class="Remera">
+                        <img class="ImagenRemera" src="assets/img/RemeraBocaNiños4.jpg" alt="">
+                        <div class="ContainerPrecioComprar">
+                            <a class="TipografiaProductos" href="">$10.000</a>
+                            <a class="TipografiaProductos" href="">Comprar</a>
+                            <img src="" alt="">
+                            <!--Carrito de compras-->
+                        </div>
+                    </div>
                 </div>
             </section>
         </section>
@@ -55,4 +110,5 @@
     </footer>
     <script src="./js/Carrito.js"></script>
 </body>
+
 </html>
