--- a/pages/Hombre.html
+++ b/pages/Hombre.html
@@ -35,7 +35,7 @@
             <h2 id="TituloProductos_Hombre">Productos: Hombre</h2>
             <div id="ProductosHombre">
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaHombre1.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/C1.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$15.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaHombre2.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/C2.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$15.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaHombre3.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/C3.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$15.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="Short">
-                    <img class="ImagenShort" src="../assets/img/ShortBoca1.jpg" alt="">
+                    <img class="ImagenShort" src="../assets/img/SH1.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$9.500</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="Short">
-                    <img class="ImagenShort" src="../assets/img/ShortBoca2.jpg" alt="">
+                    <img class="ImagenShort" src="../assets/img/SH2.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$9.500</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="Short">
-                    <img class="ImagenShort" src="../assets/img/ShortBocaArquero.jpg" alt="">
+                    <img class="ImagenShort" src="../assets/img/SH3.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$9.500</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaBombonera.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/C4.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$10.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/BuzoBoca.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/B1.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$13.500</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/BuzoBocaAmarillo.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/B2.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$13.500</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -122,6 +122,7 @@
         <a class="ColorLink" href=""><img class="RedFacebook" src="../assets/img/LogoDeFacebook.png" alt=""></a>
         <a class="ColorLink" href=""><img class="RedInstagram" src="../assets/img/LogoDeInstagram.png" alt=""></a>
     </footer>
+    <script src="./js/Carrito.js"></script>
 </body>
 
 </html>
