--- a/pages/Mujer.html
+++ b/pages/Mujer.html
@@ -35,7 +35,7 @@
             <h2 id="TituloProductos_Mujer">Productos: Mujer</h2>
             <div id="ProductosMujer">
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaMujer3.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/CM3.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$15.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaMujer2.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/CM2.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$14.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaMujer1.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/CM1.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$15.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="Short">
-                    <img class="ImagenShort" src="../assets/img/RemeraDeMujer.jpg" alt="">
+                    <img class="ImagenShort" src="../assets/img/RM.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$5.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="Short">
-                    <img class="ImagenShort" src="../assets/img/ShortBoca2.jpg" alt="">
+                    <img class="ImagenShort" src="../assets/img/SH2.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$9.500</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -81,7 +81,7 @@
                 </div>
                 <!--CAMBIAR IMAGEN PARA MUJER-->
                 <div class="Short">
-                    <img class="ImagenShort" src="../assets/img/ShortBoca1.jpg" alt="">
+                    <img class="ImagenShort" src="../assets/img/SH1.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$9.500</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -96,7 +96,7 @@
         <a class="ColorLink" href=""><img class="RedFacebook" src="../assets/img/LogoDeFacebook.png" alt=""></a>
         <a class="ColorLink" href=""><img class="RedInstagram" src="../assets/img/LogoDeInstagram.png" alt=""></a>
     </footer>
-
+    <script src="./js/Carrito.js"></script>
 </body>
 
 </html>
