--- a/pages/Niños.html
+++ b/pages/Niños.html
@@ -35,7 +35,7 @@
             <h2 id="TituloProductos_Niños">Productos: Niños</h2>
             <div id="ProductosNiños">
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaNiños1.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/CN1.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$12.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaNiños2.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/CN2.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$12.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaNiños4.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/CN3.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$10.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="Remera">
-                    <img class="ImagenRemera" src="../assets/img/RemeraBocaArqueroNiño.jpg" alt="">
+                    <img class="ImagenRemera" src="../assets/img/CN4.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$10.000</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="Short">
-                    <img class="ImagenShort" src="../assets/img/ShortBocaNiños1.jpg" alt="">
+                    <img class="ImagenShort" src="../assets/img/SHN1.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$6.500</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="Short">
-                    <img class="ImagenShort" src="../assets/img/ShortBocaNiños3.jpg" alt="">
+                    <img class="ImagenShort" src="../assets/img/SHN2.jpg" alt="">
                     <div class="ContainerPrecioComprar">
                         <a class="TipografiaProductos" href="">$6.500</a>
                         <a class="TipografiaProductos" href="">Comprar</a>
@@ -95,7 +95,7 @@
         <a class="ColorLink" href=""><img class="RedFacebook" src="../assets/img/LogoDeFacebook.png" alt=""></a>
         <a class="ColorLink" href=""><img class="RedInstagram" src="../assets/img/LogoDeInstagram.png" alt=""></a>
     </footer>
-
+    <script src="./js/Carrito.js"></script>
 </body>
 
 </html>
